+ Reduced redrawing when switching documents.
+ Added autoscroll when selecting text by dragging.
+ Rendered pages are reused when entering/exiting fullscreen mode.
+ Added Home/End keyboard shortcuts.
+ Added an option to warn when closing multiple documents.
* Fixed saving and restoring maximized main window state.
* Fixed displaying floating-point numbers in non-English locales.

Changes in version 0.4 (2006-01-18):
! Unicode build for Windows 2k/XP.
! Added support for switching user interface languages.
! Added facing and continuous-facing page layouts.
+ Added support for hilighted annotations.
+ Display mode and/or zoom specified in the document are used when opening.
+ Improved page display (borders and background).
+ In fullscreen mode cursor is hidden if mouse doesn't move for a few seconds.
+ Printer settings are retained while application is running.
+ To quickly enter drag more, shift key can be pressed.
* Fixed a problem with WinDjView not responding for a few seconds
  after opening a document on some systems.
* Fixed a few crashes in print dialog.

Changes in version 0.3.6 (2005-12-21):
! Multithreading fixes: WinDjView should work more stable, especially
  on multicore, multiprocessor and hyperthreaded systems.
+ Print dialog now takes into account physical printer margins
  by default; added an option to ignore them (old behavior).
+ Print dialog now takes into account display mode (foreground,
  background, black and white or color).
* Fixed bug with preview in print dialog and printing: color pages
  sometimes were not shown in preview and not printed.
* Fixed bug in print dialog: clicking Properties buttons
  sometimes resets printing options.
* Fixed parsing print ranges in print dialog.
* Fixed paper orientation: original orientation as specified
  in the file is correctly applied.
* Fixed printing odd/even pages in one page per sheet mode.

Changes in version 0.3.5 (2005-06-14):
+ Added "Save Copy As" dialog.